# ocean

./: .cproject  .gitignore  .project  AudioServer  README.md  RELEASE_NOTES.md  gmon.out  install.txt  ocean_sound_lab_4.0.2-37.tar.gz.cksum  ocean_sound_lab_4.0.2-37.tar.gz.sha256  ocean_sound_lab_4.0.2-37.tar.gz.shasum  ocean_sound_lab_4.0.3-37.tar.gz.cksum  ocean_sound_lab_4.0.3-37.tar.gz.sha256  ocean_sound_lab_4.0.5-39_aarch64.tar.gz.cksum  ocean_sound_lab_4.0.5-39_aarch64.tar.gz.sha256  ocean_sound_lab_4.0.5-39_x86_64.tar.gz.cksum  ocean_sound_lab_4.0.5-39_x86_64.tar.gz.sha256  ocean_sound_lab_4.1.2-40.tar.gz.cksum  ocean_sound_lab_4.1.2-40.tar.gz.sha256  ocean_sound_lab_4.2.0-40.tar.gz.cksum  ocean_sound_lab_4.2.0-40.tar.gz.sha256  oceansetup.sh  post_inst.sh  synth.xml
Audioserver/: .cproject  .gitignore  .project  AudioServer.cpp  CMakeLists.txt  audio.cpp
Cmake/: .gitignore  .project  CMakeLists.txt
Composer/: .cproject  .project  CMakeLists.txt  Compose.cpp  Composer.cpp  Composer.h  Interpreter.h  Interpreter_base.h  Lineedit.h  Processor.h  compiler.cpp  gmon.out  interpreter.cpp  lineedit.cpp  nohup.out  processor.cpp
Comstack/: .cproject  .project  Comstack.cpp  gmon.out  nohup.out
OceanGUI/: .cproject  .gitignore  .project  Adsrdialog.h  Adsrdialog.ui  CMakeLists.txt  Common.h  CutDesk_Dialog.ui  Cutterdialog.h  Dispatcher.cpp  Dispatcher.h  File_Dialog.cpp  File_Dialog.h  File_Dialog.ui  File_Dialog_class.h  File_Dialog_class.ui  Keyboad_dialog.h  Mainwindow.h  Makefile  Makefile_qt6  OceanGUI.pro  OceanGUI.pro.user.4e9bee8  OceanGUI.pro.user.ef13bc0  OceanGUI_main.cpp  OscilloscopeWidget.cpp  Oszilloscopewidget.h  Rtsp_dialog_class.h  Rtsp_dialog_class.ui  Sds_dialog_class.h  SndlabGUI.cpp  SndlabGUI.pro  SndlabGUI.pro.user.bc196e7  Spectrum_dialog_class.h  Test.h  adsrdialog.cpp  bak.tar  common.cpp  cutterdialog.cpp  cutterdialog.ui  datagraphic.cpp  (+56 more)
OceanGUI/Default/: makefile  subdir.mk
OceanGUI/include/: Common.h  Cutterdialog.h  DataGraphicClass.h  Dispatcher.h  File_Dialog.h  File_Dialog_class.h  GUIcommon.h  Keyboad_dialog.h  Mainwindow.h  Oszilloscopewidget.h  Rtsp_dialog.h  Rtsp_dialog_class.h  Spectrum_dialog.h  Spectrum_dialog_class.h  gmon.out
Resource/: .gitignore  .test2.snd  Bass-Violin.kbd  Data.cfg  E-Gitarre.kbd  FlowChart.odg  Gong.kbd  Katze.kbd  Ocean-SL_Usermanual.odt  Ocean.odt  Saxophone.kbd  Singsong.kbd  Singsong_man.kbd  Singsong_woman.kbd  Sitarre.kbd  Synthesizer.odt  Tuba.kbd  adsr.odg  alphorn.kbd  brush.kbd  carmina.kbd  clearipc.sh  config.txt  default.kbd  drum2.kbd  drum3.kbd  drums.kbd  drumsfast.kbd  freqTable.txt  geige_orchester.kbd  gmon.out  lib.inc  main.synth  oceandeploy.sh  oceansetup.sh  piano.kbd  rythmgenerator.kbd  sing_duo.kbd  sound.kbd  special.kbd  (+4 more)
Resource/Instruments/: .test.snd  .test2.snd  .test2.snd.txt  Bass-Violin.snd  Drums.snd  Katze.snd  Pauke.snd  Piano..snd  Piano.snd  Saxophone.snd  Singsong_woman.snd  Sitarre.snd  Violin.snd  Violine.snd  bell.snd  brush.snd  default.snd  drum.snd  drum2.snd  drums.snd  e-guitarre.snd  exp2.snd  experimental.snd  extreme.snd  geige_orchester.snd  piano.snd  posaune.snd  test.snd  violin.snd  violine.snd  wale.snd  xyz.snd
Resource/Notes/: .test.nte  .testcase.nte  Bass-Violin.nte  auto.nte  beat.nte  beat3.nte  beat4.nte  brush.nte  carmina.nte  change.kbd  chor.kbd  chor.nte  default.musicxml  default.nte  drum3.kbd  drums.kbd  drums.nte  drums2.nte  firat.nte  first.nte  for-alphorn.kbd  for-alphorn.nte  for-drums.nte  for-drums2.kbd  for-drums2.nte  for-example.kbd  for-example.nte  for-piano.kbd  for-piano.nte  for-rhythm.kbd  for-rhythm.nte  for-saxophone.nte  for-singing.nte  for-singing_man.kbd  for-singing_man.nte  for-singing_woman.kbd  for-singing_women.nte  for-violine.nte  freejazz_saxophone.nte  gmon.out  (+18 more)
Rtsp/: .cproject  .gitignore  .project  CMakeLists.txt  rtsp_main.cpp
Rtsp/xRelease/: makefile  subdir.mk
SDSview/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  SDSview.cpp  SDSview.cpp.bak  viewinterface.cpp
Setup/: .cproject  .gitignore  .project  Build.h  CMakeLists.txt  ReleaseNotes.h  Setup.cpp
Synth/: .cproject  .gitignore  .project  CMakeLists.txt  Synthesizer.cpp  Synthesizer.h  apptest.cpp  eventhandler.cpp
Synthesizer/: .cproject  .gitignore  .project  Synthesizer.cpp  Synthesizer_main.cpp
TestPrj/: .cproject  .gitignore  .project  Testprg.cpp  Xmltest.cpp  menu_example  rtsp.cpp  sem.cpp  xmltest.cpp
comstack/: .cproject  .project  Comstack.cpp  comstack.cpp
comstack/Debug/: makefile  subdir.mk
include/: .cproject  Adsr.h  App.h  Appsymbols.h  Audio.h  AudioVolume.h  Audioserver.h  Client.h  Common.h  Composer.h  Comstack.h  Config.h  Configbase.h  Dynamic.h  Event.h  EventKeys.h  Exit.h  External.h  Fourier.h  Frequency.h  GUIinterface.h  Instrument.h  Interface.h  Interpreter.h  Kbd.h  Keyboard.h  Keyboard_base.h  Keys.h  Logfacility.h  Mixer.h  Mixerbase.h  Notes.h  Notesbase.h  Ocean.h  Osc.h  Oscbase.h  Oscgroup.h  Osctypes.h  Oscwaveform.h  Print.h  (+39 more)
libSynthesizer/: .cproject  .project  External.cpp  Instrument.cpp  Interpreter.cpp  Logfacility.cpp  Notes.cpp  Notesbase.cpp  Oscbase.cpp  Record.cpp  Wavedisplay.cpp  common.cpp  kbd.cpp  mixer.cpp  osc.cpp  spectrum.cpp  synthmem.cpp
rtsp/: .cproject  .project  rtcp_main.cpp  rtsp_main.cpp
src/: .cproject  .project  CMakeLists.txt  External.cpp  File_Dialog.cpp  GUIinterface.cpp  Instrument.cpp  Interface.cpp  Interpreter.cpp  Keyboard.cpp  Logfacility.cpp  Notes.cpp  Notesbase.cpp  Oscbase.cpp  OscilloscopeWidget.cpp  Record.cpp  SndlabGUI.cpp  String.cpp  Variation.cpp  Wavedisplay.cpp  adsr.cpp  app.cpp  appstate.cpp  appsymbols.cpp  apptest.cpp  audio.cpp  common.cpp  config.cpp  dataworld.cpp  device.cpp  dynamic.cpp  eventhandler.cpp  external.cpp  fft.cpp  filedialog.cpp  fourier.cpp  frequency.cpp  instrument.cpp  interface.cpp  interpreter.cpp  (+37 more)
src/Debug/: makefile  sources.mk  subdir.mk
src/Debug/common/: subdir.mk
src/common/: dataworld.cpp  register.cpp
src/rtsp/: shmmixer.cpp  shmmixer.cpp.txt
(+62 files in other folders)
